--- a/ac.soton.coda.doc/latex/vhdl/vhdl-getting_started.tex
+++ b/ac.soton.coda.doc/latex/vhdl/vhdl-getting_started.tex
@@ -1,7 +1,7 @@
 \section{Getting Started}
 \label{sec:vhdl-getting-started}
 
-We assume that the users are familiar with constructing CODA models.  This section presents tutorial on generating VHDL behavoural models and testbench from CODA models and simulation oracles.
+We assume that the users are familiar with constructing CODA models.  This section presents a tutorial on generating VHDL behavoural models and testbench from CODA models and simulation oracles.
 
 \subsection{Generating Behavioural VHDL Tutorial}
 \label{sec:vhdl-generate-behavioural-model-tutorial}
