--- a/ac.soton.coda.doc/latex/vhdl/vhdl-reference.tex
+++ b/ac.soton.coda.doc/latex/vhdl/vhdl-reference.tex
@@ -1,6 +1,10 @@
 \section{Reference}
 \label{sec:vhdl-reference}
 
+In order to generate VHDL code from a CODA model, the CODA model should satisfy some ``well-formedness'' condition. In this current prototype, anything cannot be translated will be ignored.
+
+This section will be expanded further as the tool becomes mature.
+
 %%% Local Variables:
 %%% mode: latex
 %%% TeX-master: "vhdl-user_manual"
