remove standard headings and add context

--- a/ac.soton.coda.doc/latex/component_diagrams/component_diagrams-user_manual.tex
+++ b/ac.soton.coda.doc/latex/component_diagrams/component_diagrams-user_manual.tex
@@ -36,15 +36,17 @@
  \fi%
 \fi%
 
-\input{component_diagrams-getting_started}
+\input{component_diagrams-context}
 
-\input{component_diagrams-concepts}
-
-\input{component_diagrams-tasks}
-
-\input{component_diagrams-reference}
-
-\input{component_diagrams-samples}
+%\input{component_diagrams-getting_started}
+%
+%\input{component_diagrams-concepts}
+%
+%\input{component_diagrams-tasks}
+%
+%\input{component_diagrams-reference}
+%
+%\input{component_diagrams-samples}
 
 \input{component_diagrams-legal}
 
