--- a/ac.soton.coda.doc/latex/user_manual.tex
+++ b/ac.soton.coda.doc/latex/user_manual.tex
@@ -8,6 +8,9 @@
 \usepackage{hyperref}
 \usepackage{coda}
 
+\usepackage{longtable}
+\usepackage{ltcaption}
+
 \usepackage{vhdl}
 
 %\usepackage[T1]{fontenc}
