--- a/ac.soton.coda.doc/latex/component_diagrams/component_diagrams-user_manual.tex
+++ b/ac.soton.coda.doc/latex/component_diagrams/component_diagrams-user_manual.tex
@@ -22,7 +22,7 @@
 
 % % Date
 \date{%
-  Version 0.0.1\\%
+  Version 3.0.0\\%
   \today%
 }
 
@@ -37,6 +37,23 @@
 \fi%
 
 \input{component_diagrams-context}
+
+\input{component_diagrams-introduction}
+
+\input{component_diagrams-runningTheTool}
+
+\input{component_diagrams-buildingModels}
+
+\input{component_diagrams-validationAndSimulation}
+
+\input{component_diagrams-tutorial}
+
+\input{component_diagrams-ioLevelRefinement}
+
+\input{component_diagrams-refactoring}
+
+\input{component_diagrams-translationToEventB}
+
 
 %\input{component_diagrams-getting_started}
 %
