Used \code from coda.sty

--- a/ac.soton.coda.doc/latex/component_diagrams/component_diagrams-tutorial_secondRefinement.tex
+++ b/ac.soton.coda.doc/latex/component_diagrams/component_diagrams-tutorial_secondRefinement.tex
@@ -27,7 +27,7 @@ Model checking does indeed show immediately that the safety invariant is violate
 Figure 30 - Counterexample Discovered by ProB
 
 Although the refinement models the latency that certainly exists between the washing machine sub-system and door sub-system, it allows the user to open and close the door repeatedly in zero-time. Modelling this Zeno Behaviour is unrealistic and results in a scenario where the user can close the door and then open it again immediately just before it is locked.
-The solution is to model more realistically the latency that must exist in the opening and closing of the door by introducing a delay on the External Event, closeDoor, as shown in Figure 31. The guard  \textbf{\texttt{current\_time $>$ DOOR\_latency}}, where DOOR\_latency is a variable that is set to current\_time + 1 by any preceding door open or close events, ensures that two door events cannot occur on consecutive clock ticks. This corresponds to an assumption that the systems time response makes it impossible to open and close the door without it being detected. This is sufficient to ensure that any changes of door state are successfully transmitted to the WM component.
+The solution is to model more realistically the latency that must exist in the opening and closing of the door by introducing a delay on the External Event, closeDoor, as shown in Figure 31. The guard  \textbf{\code{current\_time > DOOR\_latency}}, where DOOR\_latency is a variable that is set to current\_time + 1 by any preceding door open or close events, ensures that two door events cannot occur on consecutive clock ticks. This corresponds to an assumption that the systems time response makes it impossible to open and close the door without it being detected. This is sufficient to ensure that any changes of door state are successfully transmitted to the WM component.
  
 Figure 31 - Introducing Latency to the Door Operations
  
